--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 services:
   - docker
 before_install:
+  - openssl aes-256-cbc -K $encrypted_326343ebfff0_key -iv $encrypted_326343ebfff0_iv
+    -in deploy_key.enc -out ./deploy_key -d
   - docker build -t complex/client -f ./client/Dockerfile.dev ./client
 script:
   - docker run -e CI=true complex/client npm run test -- --coverage
@@ -17,3 +19,8 @@ after_success:
   - docker push pramindanata/complex-server
   - docker push pramindanata/complex-worker
   - docker push pramindanata/complex-nginx
+deploy:
+  provider: script
+  script: bash deploy.sh
+  on:
+    branch: master
