--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,7 +12,7 @@ services:
 
   db:
     container_name: db
-    image: "${IMAGE_DB}"
+    image: postgres:11
     networks:
       - complex
     volumes:
@@ -26,7 +26,7 @@ services:
 
   redis:
     container_name: redis
-    image: "${IMAGE_REDIS}"
+    image: redis:latest
     networks:
       - complex
 
