--- a/nginx/default-prod.conf
+++ b/nginx/default-prod.conf
@@ -11,8 +11,8 @@ server {
 
   location / {
     proxy_pass http://client;
-    index index.html
-    try_files $uri $uri/ index.html
+    index index.html;
+    try_files $uri $uri/ index.html;
   }
 
   location /api {
