--- a/nginx/default-prod.conf
+++ b/nginx/default-prod.conf
@@ -12,7 +12,7 @@ server {
   location / {
     proxy_pass http://client;
     index index.html;
-    try_files $uri $uri/ index.html;
+    try_files $uri $uri/ /index.html;
   }
 
   location /api {
