--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DB_USER=postgres
 DB_PASSWORD=
 DB_NAME=fibonnaci
 
-IMAGE_WEB_SERVER=<your_username>/complex-nginx
-IMAGE_CLIENT_APP=<your_username>/complex-client
-IMAGE_SERVER_APP=<your_username>/complex-server
-IMAGE_WORKER=<your_username>/complex-worker
+IMAGE_WEB_SERVER=<username>/complex-nginx
+IMAGE_CLIENT_APP=<username>/complex-client
+IMAGE_SERVER_APP=<username>/complex-server
+IMAGE_WORKER=<username>/complex-worker
